# Marpa

./: .gitignore  Build.PL  Changes  LICENSE  MANIFEST  META.json  META.yml  Makefile.PL
author.t/: .gitignore  Makefile  ampersand.t  critic.t  critic1  display.t  perlcriticrc
etc/: Makefile  change_version.pl  check_links.pl
inc/UrHTML/t/: examples.t  fmt.t  parse.t  score.t  synopsis.t  tang.t
inc/proof/: Makefile  ah2002_notes.lyx  ah_to_leo.lyx  proof.lyx
lib/: Marpa.pm
lib/Marpa/: Callback.pm  Display.pm  Evaluator.pm  Grammar.pm  Grammar.pod  Internal.pm  MDLex.pm  Perl.pm  Raw_Source.pm  Recce_Value.pm  Recognizer.pm  Test.pm  UrHTML.pm
lib/Marpa/Doc/: API.pod  Algorithm.pod  Bibliography.pod  Bocage.pod  Debug.pod  Evaluator.pod  Grammar.pod  Implementation.pod  Leo.pod  Marpa.pod  Models.pod  Parse_Terms.pod  (+4 more)
libmarpa/: .gitignore  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  marpa.c
t/: ah2.t  ah2s.t  ah_numeric.t  chaf.t  code_diag.t  counter.t  curly.t  cycle_count.t  debug.t  debug_leo.t  debug_seq.t  duplicate_parse.t  equation.t  final_nonnullable.t  gj.t  hu.t  implementation.t  infinite.t  infinite2.t  infinite_plex.t  initial_nulls.t  leo.t  leo2.t  leo3.t  leo_example.t  leo_s.t  limits.t  minus.t  no_pp.t  no_xs.t  null_example.t  null_infinite1.t  null_infinite4.t  null_value.t  pascal.t  perl.t  randal.t  rewrite.t  sequence.t  sequence2.t  (+4 more)
t/old_eval/: README  ah2.t  ah_numeric.t  code_diag.t  duplicate_parse.t  equation.t  final_nonnullable.t  implementation.t  leo.t  syn_engine.t
urperl/: testppi.pl
(+17 files in other folders)
